welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:3: error: not found: value poseBrosse
		poseBrosse()
                ^