welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
	def mark() {
		poseBrosse()
		leveBrosse()
	}
	def slash(c:Color) {
		avance()
		mark()
		gauche()
		avance()
		gauche()
		avance()
		mark()
		gauche()
		avance()
		gauche()
		avance()
		avance()
	}
	def carre() {
		slash(Color.red)
		slash(Color.blue)
		slash(Color.yellow)
		slash(Color.green)
		}
	carre()
}
